--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@progress/kendo-licensing": "^1.3.3",
+    "@progress/kendo-svg-icons": "^2.0.0",
+    "@progress/kendo-theme-default": "^7.0.2",
+    "@progress/kendo-ui": "^2023.3.1114",
+    "@progress/kendo-vue-buttons": "^4.1.0",
+    "@progress/kendo-vue-dateinputs": "^4.1.0",
+    "@progress/kendo-vue-dropdowns": "^4.1.0",
+    "@progress/kendo-vue-inputs": "^4.1.0",
+    "@progress/kendo-vue-labels": "^4.1.0",
+    "@progress/kendo-vue-layout": "^4.1.0",
     "axios": "^1.6.2",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
